# api-gateway-test

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.config/: prometheus.yml
app/blue/: main.py
app/green/: main.py
test/: locustfile.py
