[tool.flake8]
max_line_length = 120
show_source = true
extend_ignore = "E203"
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist"
]
max_complexity = 10

[tool.mypy]
files = ["app", "tests"]
ignore_errors = true
explicit_package_bases = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
skip = [".gitignore", "migrations"]

[tool.poetry]
name = "api-gateway-test"
version = "0.1.0"
description = ""
authors = ["White <white.rd@kakaobank.com>"]
readme = "README.md"
packages = [{include = "api_gateway_test"}]

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^6.1.0"
black = "^23.7.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
mypy = "^1.4.1"
uvicorn = "^0.23.2"
prometheus-fastapi-instrumentator = "^6.1.0"
fastapi = "0.70.1"
locust = "^2.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
